--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+MONGOBD_URL=mongodb+srv://iago:brasil222@de-bras.1m2n3.mongodb.net/marktplace-de-bras?retryWrites=true&w=majority
+PORT=3333
+
+
 AWS_ACCESS_KEY_ID=AKIA4WSY6OBET2OKMO5T
 AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=us-east-1
+
+
