--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "API dbras",
   "main": "server.js",
+  "engines": {
+    "node": "13.9.0",
+    "yarn": "1.22.4"
+  },
   "scripts": {
     "test": "mocha --timeout 2000 --exit",
     "dev": "NODE_ENV=development & nodemon server.js",
