--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "mocha --timeout 2000 --exit",
     "dev": "NODE_ENV=development & nodemon server.js",
-    "start": "node server.js",
-    "build": "NODE_ENV=production pm2 start server.js --name=\"ecommerce-api\""
+    "start": "node server.js"
   },
   "author": "Iago Bispo",
   "license": "ISC",
