--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "API dbras",
   "main": "server.js",
   "engines": {
-    "node": "10.19.0",
+    "node": "14.15.1",
     "yarn": "1.22.4"
   },
   "scripts": {
     "test": "mocha --timeout 2000 --exit",
     "dev": "NODE_ENV=development & nodemon server.js",
-    "start": "node server.js"
+    "start": "NODE_ENV=development & node server.js"
   },
   "author": "Iago Bispo",
   "license": "ISC",
